fix on mobile

--- a/source/stylesheets/all.sass
+++ b/source/stylesheets/all.sass
@@ -5,8 +5,8 @@ body
   padding-top: 50px
 
 #logo
-  margin: 10px
-
+  margin-top: 10px
+  margin-bottom: 10px
 article
   margin-bottom: 50px
 time
